Bug 1018269: Handle Shadow DOM in keyframes lookup. r=heycam

MozReview-Commit-ID: AeUmsOHOUYR